--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -11,7 +11,8 @@ name: Java CI with Maven
 on:
   push:
     branches: [ "master" ]
-
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
   build:
@@ -27,9 +28,8 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Execute Jar File
-      run: mvn -B package --file pom.xml
+      run: mvn clean install -DskipTests
+
 
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
