--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Login to docker hub
         run: docker login -u ${{secrets.DOCKER_USERNAME}} -p ${{secrets.DOCKER_PASSWORD}}
       - name: Build docker image
-        run: docker build -t arslan173/userdata173:DataManagement .
+        run: docker build -t arslan173/usermanagement:DataManagement .
       - name: Publish image to docker hub
-        run: docker push arslan173/userdata173:DataManagement
+        run: docker push arslan173/usermanagement:DataManagement
