--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>usermanagement</finalName>
 	</build>
 
 </project>
