--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/UserManagement?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=admin
+spring.datasource.username=ubuntu
+spring.datasource.password=ubuntu
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
