--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,9 @@ jobs:
         run: docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
       - name: Build Docker Image
         run: docker build -t arslan173/usermanagement:latest .
+      - name: Push Docker Image
+        run: docker push arslan173/usermanagement:latest
+
 
   deploy:
     needs: build
@@ -33,8 +36,9 @@ jobs:
     steps:
       - name: Stop and Remove Old Container
         run:
-          docker stop usermanagement-container || true
-          docker rm -f usermanagement-container || true
+          docker rm -f usermanagement-container
+#          docker stop usermanagement-container || true
+
 
       - name: Pull Image from Docker Hub
         run: docker pull arslan173/usermanagement:latest
